--- a/server/public/main.css
+++ b/server/public/main.css
@@ -3,5 +3,55 @@
 }
 
 body {
-  background-color: #55969c;
+  background-color: #2096c7;
+  font-family: 'Dosis', sans-serif;
+}
+
+h1 {
+  font-family: 'Gochi Hand', cursive;
+  color: white;
+  font-size: 3em;
+  margin: 5% 0 0 0;
+  padding: 0;
+}
+
+h1 {
+  margin-bottom: 0;
+}
+
+/*  - - -    Input Fields & Login  - - - */
+
+input[type=text], select {
+  width: 50%;
+  padding: 12px 20px;
+  margin: auto;
+  border: 1px solid #ccc;
+  border-radius: 4px;
+  box-sizing: border-box;
+}
+
+input[type=submit]{
+  width: 100%;
+  background-color: #54c79e;
+  color: white;
+  padding: 14px 20px;
+  margin: 50px auto;
+  border: none;
+  border-radius: 4px;
+  cursor: pointer;
+}
+
+select {
+  margin: 5% 0 5% 0;
+  padding: 5% 0 5% 0;
+}
+
+.login {
+  display: flex;
+  list-style-type: none;
+  text-align: center;
+}
+
+.login li {
+  list-style-type: none;
 }
